php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #31422 No Error-Logging on SoapServer-Side
Submitted: 2005-01-06 01:52 UTC Modified: 2005-01-20 13:55 UTC
From: m dot leuffen at i-line dot net Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5.0.3 OS: Linux
Private report: No CVE-ID: None
 [2005-01-06 01:52 UTC] m dot leuffen at i-line dot net
Description:
------------
When calling a Class by Soap, the SoapServer-Script seems to log/show no errors.

On fatal error occuring in the Server, the client will recieve a SoapFault with the Error-Description but Line-Number of the Client-Call.

SoapClient::__getLastResponse() contains no error-output from Server.

Reproduce code:
---------------
// The Server (testServer.php)
<?PHP
	class test {
		
		public function testMe () {
			unknown_function();
		}	
	}
	
$obj = new SoapServer(null, array ("uri"=>"http://test-uri/"));
$obj->setClass("test");
$obj->handle();
?>

// The Client (testClient.php)
<?PHP
$obj = new SoapClient(null, array ('location' => "http://url.to/testServer.php","uri"=>"http://test-uri/", 'trace'=>1));
$obj->testMe ();

?>

Expected result:
----------------
Any error logging (in php error logfile):

PHP Fatal error: Call to undefined function unknown_function() in testServer.php:5

and any direct error-output from the SoapServer-Script. (to access directly by using SoapClient::__getLastResponse())

Actual result:
--------------
No logging of the error occured in testServer.php.
Only Html-Output and Log-entry from the uncaught exception in testClient.php:

Fatal error: Uncaught SoapFault exception: [SOAP-ENV:Server] Call to undefined function unknown_function() in /testClient.php:4 Stack trace: #0 /testClient.php(4): SoapClient->testMe('testMe', Array) #1 {main} thrown in /testClient.php on line 4


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-01-20 13:55 UTC] dmitry@php.net
Fixed in CVS (HEAD and PHP_5_0).
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 24 11:00:01 2026 UTC