Fixed bug #31422 (No Error-Logging on SoapServer-Side).