ext/soap/tests/schema/schema066.phpt
@@ -14,10 +14,10 @@ EOF;
 test_schema($schema,'type="tns:testType"',(object)array("str"=>"str"));
 echo "ok";
 ?>
---EXPECT--
+--EXPECTF--
 <?xml version="1.0" encoding="UTF-8"?>
 <SOAP-ENV:Envelope xmlns:SOAP-ENV="http://schemas.xmlsoap.org/soap/envelope/" xmlns:ns1="http://test-uri/" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:SOAP-ENC="http://schemas.xmlsoap.org/soap/encoding/" SOAP-ENV:encodingStyle="http://schemas.xmlsoap.org/soap/encoding/"><SOAP-ENV:Body><ns1:test><testParam str="str" xsi:type="ns1:testType"/></ns1:test></SOAP-ENV:Body></SOAP-ENV:Envelope>
-object(stdClass)#5 (2) {
+object(stdClass)#%d (2) {
   ["str"]=>
   string(3) "str"
   ["int"]=>
